# projet-infographie

./: .gitignore  CMakeLists.txt  Camera.h  README.md  Sphere.h  build_and_run.sh  projet-infographie.sln  projet-infographie.vcxproj  projet-infographie.vcxproj.filters
projet-infographie.xcodeproj/: project.pbxproj
projet-infographie.xcodeproj/xcshareddata/xcschemes/: projet-infographie Debug.xcscheme  projet-infographie Release.xcscheme
res/shaders/: Basic.glsl  Basic.shader  Texture.glsl
src/: GLFWContext.cpp  GLFWContext.h  debug-trap.h  main.cpp  opengl_include.h  shader.h
src/application/: application.cpp  application.h
src/application/scenegraph/: Material.h  Node.cpp  Node.h  SceneGraph.cpp  SceneGraph.h  Shader.h
src/application/scenegraph/material/: CubemapMaterial.h  DefaultMaterial.h  GalaxyMaterial.h  Material.h  ShaderMaterial.h
src/context/: GLFWContext.cpp  GLFWContext.h
src/glfw/: GLFWContext.cpp  GLFWContext.h
src/opengl/: Macros.h
src/opengl/context/: GLFWContext.cpp  GLFWContext.h  IMGUIContext.cpp  IMGUIContext.h
src/opengl/rendering/: IndexBuffer.cpp  IndexBuffer.h  Renderer.h  RendererId.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/renderer/: AABB.h  BvhNode.h  ComposedShape.h  Cube.h  ImportModel.h  Interval.h  Light.h  Material.h  Primitive3D.h  PrimitiveCreator.cpp  PrimitiveCreator.h  Pyramid.h  Quad.h  RayMesh.h  SceneObject.h  Sphere.h  Triangle.h  Vec3.h  WallPrimitive.h  renderer.cpp  renderer.h  util.cpp  util.h  utility.h
src/renderer/cursor/: CursorManager.cpp  CursorManager.h
src/renderer/rayTracer/: Interval.h  Ray.h  RayMaterial.h
src/renderer/rayTracer/RayObjects/: ComposedShape.h  Cube.h  Pyramid.h  Quad.h  RayMesh.h  Sphere.h  Triangle.h
src/renderer/rayTracer/Utilities/: AABB.h  BvhNode.h  Vec3.h  utility.h
src/renderer/sceneObjects/: Camera.h  HitRecord.h  ImportModel.cpp  ImportModel.h  Light.h  Primitive3D.h  SceneObject.h
src/renderer/scenes/: GeometryScene.cpp  GeometryScene.h  ImageHistogramScene.cpp  ImageHistogramScene.h  ImportImageScene.cpp  ImportImageScene.h  ImportImportExportScene.cpp  ImportImportExportScene.h  PrimitiveScene.cpp  PrimitiveScene.h  RotatingCubeScene.h  Scene.h  Scene3D.cpp  Scene3D.h  Scenes.cpp  Scenes.h
src/renderer/scenes/3dscene/: Scene3D.cpp  Scene3D.h
src/renderer/scenes/3dscene/commands/: AddShapeChildToNodeCommand.h  Command.h  CommandHistory.cpp  CommandHistory.h  EnableLightCommand.h  MoveChildCommand.h  RemoveNodeCommand.h  SetCameraFovCommand.h  SetColorCommand.h  SetLightAttenuationCommand.h  SetLightColorsCommand.h  SetLightSpotConcentrationCommand.h  SetLightSpotCutOffCommand.h  SetLightTypeCommand.h  SetMaterialCommand.h  SetPositionCommand.h  SetRotationCommand.h  SetScaleCommand.h
src/renderer/scenes/3dscene/createShapes/: CreateCameraUI.h  CreateCubeUI.h  CreateLasagnaUI.h  CreateLightUI.h  CreatePyramidUI.h  CreateShapeUI.h  CreateSphereUI.h  CreateSurfaceUI.h  CreateWallUI.h  SharedShapeCreationParams.h
src/renderer/scenes/createShapes/: CreateCubeUI.h  CreateShapeUI.h  SharedShapeCreationParams.h
